# cognimates-training

./: .env  .env.example  .eslintrc.js  .gitignore  .openode  .windsurfrules  Procfile  README.md  build_base64.txt  check_env.js  check_model_status.js  check_model_structure.js  check_pat_scopes.js  check_pat_scopes_v2.js  check_secrets.js  check_uclassify_keys.js  config.js  config.js.example.js  deployment-updates.patch  detailed_uclassify_test.js  download_cat_images.js  download_dog_images.js  generate_better_dog_images.js  generate_cat_images.js  generate_dog_images.js  generate_test_images.js  index.js  jest.config.js  localtunnel_output.txt  model_config.yaml  new-updated-dependencies (1).patch  ngrok_output.txt  package-lock.json  package.json  paths.js  postcss.config.js  pyproject.toml  railway.json  railway.toml  recreate_model.js  (+65 more)
controllers/: auth.js  clarifai.js  gcp-image-trainer.js  gcp-text-trainer.js  health.js  nlc.js  test-images.js  text.js  vision.js
models/: AuthToken.js  User.js  UserClassifier.js  VisionClassifier.js
routes/: clarifai.js  image.js  index.js  text.js
scss/: style.scss
scss/common/: _base.scss  _dropzone.scss  _filepond.scss  _footer.scss  _header.scss  _mixins.scss  _mq-debugger.scss  _mq.scss  _noty.scss  (+1 more)
src/: index.js
three/: index.html
three_webdnn/: README.md
views/: home.handlebars  home.html  index.handlebars  index.html  login.handlebars  nlc.html  nlc_examples.html  nlc_home.html  nlc_train.html  train.html  vision-train.html  vision.html  vision_examples.html  vision_home.html  vision_train.html
(+168 files in other folders)
